Reestructured solutions in separated folders, added an index.html

--- a/index.html
+++ b/index.html
@@ -1,34 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  <link rel="stylesheet" href="./css/global.css">
-  <title>Frontend Mentor | QR code component</title>
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Frontend Mentor Solutions</title>
 </head>
 <body>
-
-  <main class="main-container">
-    <div class="qr-card">
-      <figure>
-        <img class="qr-image" src="./images/image-qr-code.png" alt="image-qr-code" />
-      </figure>
-      <div class="qr-info">
-        <h3>
-          Improve your front-end skills by building projects
-        </h3>
-      
-        <p>
-          Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
-        </p>
-        
-      </div>
-    </div>
-  </main>
+    <a href="./qr-code-component/index.html">QR Code Component</a>
 </body>
 </html>
