countries-app and favicon added

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./src/global.css">
+    <link rel="icon" href="./src/assets/favicon.ico">
     <script src="./src/app.js" defer></script>
     <title>Frontend Mentor Solutions</title>
 </head>
@@ -24,7 +25,7 @@
             <div class="challenge-card">
                 <div class="img-container">
                     <a href="https://leonardof02.github.io/frontendmentor-solutions/qr-code-component/">
-                        <img src="./src/assets/qr-code-project.jpg" alt="QR Code Component">
+                        <img src="./src/assets/qr-code-project.jpg" alt="QR Code Component" class="project-img">
                     </a>
                 </div>
                 <h4>
@@ -42,7 +43,7 @@
             <div class="challenge-card">
                 <div class="img-container">
                     <a href="https://leonardof02.github.io/frontendmentor-solutions/3-column-preview-card-component/">
-                        <img src="./src/assets/3-column-preview-card-project.jpg" alt="3-Column Preview Card ">
+                        <img src="./src/assets/3-column-preview-card-project.jpg" alt="3-Column Preview Card " class="project-img">
                     </a>
                 </div>
                 <h4>
@@ -60,7 +61,7 @@
             <div class="challenge-card">
                 <div class="img-container">
                     <a href="https://leonardof02.github.io/frontendmentor-solutions/age-calculator-app-main/">
-                        <img src="./src/assets/age-calculator-project.jpg" alt="Age Calculator">
+                        <img src="./src/assets/age-calculator-project.jpg" alt="Age Calculator" class="project-img">
                     </a>
                 </div>
                 <h4>
@@ -79,7 +80,7 @@
             <div class="challenge-card">
                 <div class="img-container">
                     <a href="https://leonardof02.github.io/multi-step-form/">
-                        <img src="./src/assets/multi-step-form-project.jpg" alt="Muli Step Form">
+                        <img src="./src/assets/multi-step-form-project.jpg" alt="Muli Step Form" class="project-img">
                     </a>
                 </div>
                 <h4>
@@ -92,6 +93,28 @@
                     <img src="./src/assets/css.svg" alt="CSS">
                     <img src="./src/assets/typescript.svg" alt="TypeScript">
                     <img src="./src/assets/react.svg" alt="react">
+                    <img src="./src/assets/vite.svg" alt="Vite">
+                </div>
+            </div>
+
+            <!-- Multi Step Form Project -->
+            <div class="challenge-card">
+                <div class="img-container">
+                    <a href="https://leonardof02.github.io/countries-app/">
+                        <img src="./src/assets/countries-app-project.jpg" alt="Countries App" class="project-img">
+                    </a>
+                </div>
+                <h4>
+                    <a href="https://leonardof02.github.io/countries-app/">
+                        Countries App
+                    </a>
+                </h4>
+                <div class="tools">
+                    <img src="./src/assets/html.svg" alt="HTML">
+                    <img src="./src/assets/sass.svg" alt="SCSS">
+                    <img src="./src/assets/typescript.svg" alt="TypeScript">
+                    <img src="./src/assets/react.svg" alt="react">
+                    <img src="./src/assets/api.png" alt="API REST">
                     <img src="./src/assets/vite.svg" alt="Vite">
                 </div>
             </div>
