Images compressed and lazy loading implemented

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <div class="challenge-card">
                 <div class="img-container">
                     <a href="https://leonardof02.github.io/frontendmentor-solutions/qr-code-component/">
-                        <img src="./src/assets/qr-code-project.jpg" alt="QR Code Component" class="project-img">
+                        <img src="./src/assets/qr-code-project.jpg" alt="QR Code Component" class="project-img" loading="lazy">
                     </a>
                 </div>
                 <h4>
@@ -43,7 +43,7 @@
             <div class="challenge-card">
                 <div class="img-container">
                     <a href="https://leonardof02.github.io/frontendmentor-solutions/3-column-preview-card-component/">
-                        <img src="./src/assets/3-column-preview-card-project.jpg" alt="3-Column Preview Card " class="project-img">
+                        <img src="./src/assets/3-column-preview-card-project.jpg" alt="3-Column Preview Card " class="project-img" loading="lazy">
                     </a>
                 </div>
                 <h4>
@@ -61,7 +61,7 @@
             <div class="challenge-card">
                 <div class="img-container">
                     <a href="https://leonardof02.github.io/frontendmentor-solutions/age-calculator-app-main/">
-                        <img src="./src/assets/age-calculator-project.jpg" alt="Age Calculator" class="project-img">
+                        <img src="./src/assets/age-calculator-project.jpg" alt="Age Calculator" class="project-img" loading="lazy">
                     </a>
                 </div>
                 <h4>
@@ -80,7 +80,7 @@
             <div class="challenge-card">
                 <div class="img-container">
                     <a href="https://leonardof02.github.io/multi-step-form/">
-                        <img src="./src/assets/multi-step-form-project.jpg" alt="Muli Step Form" class="project-img">
+                        <img src="./src/assets/multi-step-form-project.jpg" alt="Muli Step Form" class="project-img" loading="lazy">
                     </a>
                 </div>
                 <h4>
@@ -101,7 +101,7 @@
             <div class="challenge-card">
                 <div class="img-container">
                     <a href="https://leonardof02.github.io/countries-app/">
-                        <img src="./src/assets/countries-app-project.jpg" alt="Countries App" class="project-img">
+                        <img src="./src/assets/countries-app-project.jpg" alt="Countries App" class="project-img" loading="lazy">
                     </a>
                 </div>
                 <h4>
