Added: New Project

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                 </div>
             </div>
 
-            <!-- Multi Step Form Project -->
+            <!-- Countries app project -->
             <div class="challenge-card">
                 <div class="img-container">
                     <a href="https://leonardof02.github.io/countries-app/">
@@ -115,6 +115,27 @@
                     <img src="./src/assets/typescript.svg" alt="TypeScript">
                     <img src="./src/assets/react.svg" alt="react">
                     <img src="./src/assets/api.png" alt="API REST">
+                    <img src="./src/assets/vite.svg" alt="Vite">
+                </div>
+            </div>
+
+            <!-- TO-DO list project -->
+            <div class="challenge-card">
+                <div class="img-container">
+                    <a href="https://leonardof02.github.io/countries-app/">
+                        <img src="./src/assets/todo-list-project.jpg" alt="Todo List App" class="project-img" loading="lazy">
+                    </a>
+                </div>
+                <h4>
+                    <a href="https://leonardof02.github.io/countries-app/">
+                        Todo List with Drag and Drop
+                    </a>
+                </h4>
+                <div class="tools">
+                    <img src="./src/assets/html.svg" alt="HTML">
+                    <img src="./src/assets/css.svg" alt="CSS">
+                    <img src="./src/assets/typescript.svg" alt="TypeScript">
+                    <img src="./src/assets/react.svg" alt="react">
                     <img src="./src/assets/vite.svg" alt="Vite">
                 </div>
             </div>
