Fix: last proyect link

--- a/index.html
+++ b/index.html
@@ -122,12 +122,12 @@
             <!-- TO-DO list project -->
             <div class="challenge-card">
                 <div class="img-container">
-                    <a href="https://leonardof02.github.io/countries-app/">
+                    <a href="https://leonardof02.github.io/react-todo-list/">
                         <img src="./src/assets/todo-list-project.jpg" alt="Todo List App" class="project-img" loading="lazy">
                     </a>
                 </div>
                 <h4>
-                    <a href="https://leonardof02.github.io/countries-app/">
+                    <a href="https://leonardof02.github.io/react-todo-list/">
                         Todo List with Drag and Drop
                     </a>
                 </h4>
